<?xml version="1.0"?>
<package format="2">
  <name>battery_monitor_node</name>
  <version>0.0.1</version>
  <description>ROS2 package for Battery Monitor node</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>