<?xml version="1.0"?>
<package format="2">
  <name>mission_planner_node</name>
  <version>0.0.1</version>
  <description>ROS2 package for Mission Planner node</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>